--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css">
-    <link rel="stylesheet" href="style/global.css">
+    <link rel="stylesheet" href="/style/global.css">
     <script src="https://code.jquery.com/jquery-3.6.1.min.js" integrity="sha256-o88AwQnZB+VDvE9tvIXrMQaPlFFSUTR+nldQm1LuPXQ=" crossorigin="anonymous"></script>
     <title>My Bookmarks</title>
   </head>
@@ -151,7 +151,7 @@
               <input class="input is-small" type="text">
             </div>
             <div class="field is-horizontal">
-              <label class="label is-small">Category</label>
+              <label class="label is-small">Page</label>
                   <div class="select is-small">
                     <select>
                       <option>Main</option>
@@ -161,7 +161,7 @@
                   </div> 
             </div>
             <div class="field">
-              <label class="label is-small">Discription</label>
+              <label class="label is-small">Description</label>
               <textarea class="textarea is-small" type="text"></textarea>                   
               <label class="label is-small">Note</label>
               <textarea class="textarea is-small" type="text"></textarea>
@@ -177,7 +177,7 @@
     </main>
 
     <footer>
-      <script type="text/javascript" src="script/global.js"></script>
+      <script type="text/javascript" src="/script/main.js"></script>
     </footer>
  </body>
 </html>
